<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purple"
        android:backgroundTint="#B389DC"
        android:id="@+id/btnpurple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pink"
        android:id="@+id/btnpink"
        android:backgroundTint="#BC7192"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Green"
        android:backgroundTint="#9FCF81"
        android:id="@+id/btngreen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Zero"
        android:backgroundTint="#9FCF81"
        android:id="@+id/tvtext"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/btnAdd"
        app:layout_constraintTop_toBottomOf="@id/btnpink"
        android:layout_marginTop="15sp"
        app:layout_constraintStart_toEndOf="@id/btnminus"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Minus"
        android:id="@+id/btnminus"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toEndOf="@id/btnpurple"
        app:layout_constraintTop_toBottomOf="@id/btnpurple"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Add"
        android:backgroundTint="@color/black"
        android:id="@+id/btnAdd"
        app:layout_constraintTop_toBottomOf="@id/btngreen"
        app:layout_constraintStart_toEndOf="@id/btnpink"
        />



    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/fragmentcolor"
        app:layout_constraintTop_toBottomOf="@id/btnAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        android:name="com.romakumari.livedatacolorandnumber.FragmentColor"
        />
</androidx.constraintlayout.widget.ConstraintLayout>